--- a/index.html
+++ b/index.html
@@ -3453,6 +3453,7 @@
           <td id="L146" class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="146"></td>
           <td id="LC146" class="blob-code blob-code-inner js-file-line">        <span class=pl-kos>&lt;</span><span class=pl-ent>a</span> <span class=pl-c1>href</span>=&quot;<span class=pl-s>https://github.com/adityatelange/hugo-PaperMod/</span>&quot; <span class=pl-c1>rel</span>=&quot;<span class=pl-s>noopener</span>&quot; <span class=pl-c1>target</span>=&quot;<span class=pl-s>_blank</span>&quot;<span class=pl-kos>&gt;</span>PaperMod<span class=pl-kos>&lt;/</span><span class=pl-ent>a</span><span class=pl-kos>&gt;</span></td>
         </tr>
+<a rel="me" href="https://spore.social/@abe">Mastodon</a>
         <tr>
           <td id="L147" class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="147"></td>
           <td id="LC147" class="blob-code blob-code-inner js-file-line">    <span class=pl-kos>&lt;/</span><span class=pl-ent>span</span><span class=pl-kos>&gt;</span></td>
