--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="dns-prefetch" href="https://user-images.githubusercontent.com/">
   <link rel="preconnect" href="https://github.githubassets.com" crossorigin>
   <link rel="preconnect" href="https://avatars.githubusercontent.com">
+  <link rel="me" href="https://spore.social/@abe">
 
 
 
