--- a/index.html
+++ b/index.html
@@ -2937,7 +2937,7 @@
         </tr>
         <tr>
           <td id="L20" class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="20"></td>
-          <td id="LC20" class="blob-code blob-code-inner js-file-line"><span class=pl-kos>&lt;</span><span class=pl-ent>meta</span> <span class=pl-c1>name</span>=&quot;<span class=pl-s>theme-color</span>&quot; <span class=pl-c1>content</span>=&quot;<span class=pl-s>#2e2e33</span>&quot;<span class=pl-kos>&gt;</span></td>
+          <td id="LC20" class="blob-code blob-code-inner js-file-line"><span class=pl-kos>&lt;</span><span class=pl-ent>meta</span> <span class=pl-c1>name</span>=&quot;<span class=pl-s>theme-color</span>&quot; <span class=pl-c1>content</span>=&quot;<span class=pl-s>#028e9b</span>&quot;<span class=pl-kos>&gt;</span></td>
         </tr>
         <tr>
           <td id="L21" class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="21"></td>
