manual index updates

--- a/random/index.html
+++ b/random/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Posts | gray compass</title>
+<title>Random | gray compass</title>
 <meta name="keywords" content="">
 <meta name="description" content="Random - gray compass">
 <meta name="author" content="">
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="https://graycompass.co/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://graycompass.co/posts/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://graycompass.co/random/index.xml">
 <noscript>
     <style>
         #theme-toggle,
